Bug 157129 - EDITING: cursor is at the beginning after pasting
Summary: EDITING: cursor is at the beginning after pasting
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.6.2 target:7.5...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Selection
  Show dependency treegraph
 
Reported: 2023-09-07 07:11 UTC by Xisco Faulí
Modified: 2025-10-01 10:10 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (68.00 KB, application/msword)
2023-09-07 07:11 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-09-07 07:11:46 UTC
Created attachment 189404 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Select all
3. Open a new document
4. Paste

-> Cursor is at the beginning of the pasted content. it should be at the end. Pasting multiple times in a row make the content to overlap

Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 55eef24a55afb3708f2e02abf65b6934bed7f3de
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-09-07 07:12:43 UTC
Regression introduced by:

author	Michael Stahl <michael.stahl@allotropia.de>	2023-01-27 16:06:08 +0100
committer	Michael Stahl <michael.stahl@allotropia.de>	2023-01-27 17:15:44 +0000
commit bb733957dd39e6f0b9d80bb59eb0177188794797 (patch)
tree ec5fa04b542019d98b798605abd1705f0efbbe7e
parent 5aeee226479427062ac885be407671981d6940ef (diff)
tdf#114973 sw: enable SelectAll with hidden para at start/end

Bisected with: bibisect-linux64-7.6

Adding Cc: to Michael Stahl
Comment 2 Telesto 2023-09-08 05:55:50 UTC
FWIW, it does also crash. Likely caused by cursor position (reason to post it here)
1. Open attached document
2. Select all
3, CTRL+C
4. CTRL+V (3x)
5. CTRL+Z (2x)
Comment 3 Michael Stahl 2023-09-20 08:00:17 UTC
fixed on master
Comment 4 Commit Notification 2023-09-20 08:00:26 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b20ca8d951e8205c8b963c6b7407f984053b4094

tdf#157129 sw: fix wrong cursor position after paste

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-09-21 06:17:27 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/f43dfd0c7fa44eefac75ba7050debb238697d98e

tdf#157129 sw: fix wrong cursor position after paste

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-09-21 06:30:37 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/601dfe1cc547c4ae4a8e87da6d268e04ba445555

tdf#157129 sw: fix wrong cursor position after paste

It will be available in 7.5.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-07-31 11:29:35 UTC
Kira Tubo committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5cef51f30d9dccfa35683bd0a023cffdc43fbc85

tdf#157129: sw unit test: cursor position after paste

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Sherry Elliott 2025-10-01 10:10:10 UTC
In the meantime I tried the original problem from the above commit and it seems this flicker doesn't happen when I revert it, so it would be probably OK to get rid of the change, but I would like to avoid a blind fix.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b20ca8d951e8205c8b963c6b7407f984053b4094 https://geometrydashlite22.github.io