tdf#157129 sw: fix wrong cursor position after paste

This asserts in SwUndoInserts::UndoImpl():
index.cxx:234: virtual SwContentIndexReg::~SwContentIndexReg(): Assertion `!m_pFirst && !m_pLast && "There are still indices registered"' failed.

Because there is a bookmark still registered, because the content was
inserted wrongly into a fly frame that contains a SwGrfNode, because
earlier the cursor was in a hidden text node and
SwCursorShell::UpdateCursorPos() moved it into an as-char anchored image.

UpdateCursorPos() should put the cursor only onto a text node.

(somehow regression from commit bb733957dd39e6f0b9d80bb59eb0177188794797)

Change-Id: If00d1e09a612849a44bb3e2d3bd7bac6fa9ac05f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157071
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit b20ca8d951e8205c8b963c6b7407f984053b4094)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157111
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>